--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<section class="intro">
 			<div class="myName">
 				<h1>JULIAN MURATORI</h1>
+				<h2>FRONT-END DEVELOPER</h2>
 			</div>
 
 			<div class="aboutMe" id="About">
