--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 							</div>
 							<div class="portfolio__Cell--Link">
 								<a href="http://wearemodern.julianmuratori.com" target='_blank'>LIVE DEMO</a>
-							</div>	
+							</div>
 						</div>
-				
+
 			</div>
 			<div class="portfolio__Container leftSide">
 					<div class='portfolio__Cell--Text textLeft divBack'>
@@ -183,8 +183,8 @@
 						</div>
 							<div class="portfolio__Cell--Link">
 								<a href="http://asteroids.julianmuratori.com" target='_blank'>LIVE DEMO</a>
-							</div>	
-					</div>	
+							</div>
+					</div>
 					<div class="portfolio__Cell--ImageContainer">
 						<img src="./public/assets/asteroid.jpg" alt="" class="portfolio__Cell--Image">
 					</div>
@@ -193,7 +193,7 @@
 				<div class="portfolio__Cell--ImageContainer">
 					<img src="./public/assets/feels1.jpg" alt="" class="portfolio__Cell--Image">
 				</div>
-				
+
 					<div class='portfolio__Cell--Text textRight divBack'>
 						<h3>Dealing With Feelings</h3>
 						<p>A vanilla Javascript project that generates inspirational quotes based on several user inputs. The user can input how they are currently feeling, how they wish to feel, and what style of quote (ie Hallmark, funny, etc.) they are hoping will jumpstart their mood.</p>
@@ -225,13 +225,13 @@
 						</div>
 						<div class="portfolio__Cell--Link">
 							<a href="http://dealingwithfeelings.julianmuratori.com" target='_blank'>LIVE DEMO</a>
-						</div>	
+						</div>
 					</div>
 			</div>
-			<!-- <div class="portfolio__Container leftSide">
+			<div class="portfolio__Container leftSide">
 					<div class='portfolio__Cell--Text textLeft divBack'>
-						<h3>The Joy of Painting</h3>
-						<p>An episode generator based on The Joy of Painting with Bob Ross. This web app is coded entirely in React and receives information from a custom built Firebase database. The user can select different paint details and generate a list of episodes containing said details.</p>
+						<h3>The Juice is Loose</h3>
+						<p>An educational jQuery project built using the Wine.com API. The user can select different styles of wine and choose specific grape varietals to learn more information about flavour profiles, common growth regions, and basic history of the chosen style.</p>
 						<div class="portfolio__Cell--Icons">
 							<div>
 								<i class="devicon-gulp-plain"></i>
@@ -258,32 +258,20 @@
 								</div>
 							</div>
 							<div>
-								<i class="devicon-git-plain"></i>
+								<i class="devicon-jquery-plain-wordmark"></i>
 								<div>
-									<p>Git</p>
-								</div>
-							</div>
-							<div>
-								<i class="devicon-react-original"></i>
-								<div>
-									<p>React</p>
-								</div>
-							</div>
-							<div>
-								<i class="devicon-nodejs-plain"></i>
-								<div>
-									<p>Node.js</p>
+									<p>jQuery</p>
 								</div>
 							</div>
 						</div>
 						<div class="portfolio__Cell--Link">
-							<a href="https://ross-e85f8.firebaseapp.com/">LIVE DEMO</a>
-						</div>	
+							<a href="http://juiceloose.julianmuratori.com">LIVE DEMO</a>
+						</div>
 					</div>
 				<div class="portfolio__Cell--ImageContainer">
-					<img src="./public/assets/ross1.jpg" alt="" class="portfolio__Cell--Image">
+					<img src="./public/assets/juiceloose.jpg" alt="" class="portfolio__Cell--Image">
 				</div>
-			</div> -->
+			</div>
 		</section>
 
 		<section class="contactInfo" id="Contact">
@@ -311,7 +299,7 @@
 	<footer>
 		<h5></h5>
 	</footer>
-		
+
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="/public/script.js" type="text/javascript"></script>
